# tradewizard_4.1

./: .env.example  .env.local  .eslintrc.json  .gitignore  INITIAL_PROMPT.md  Pipfile  README.md  SCHEMA_VERSIONING.md  WINDSURF_INSTRUCTIONS.md  crawler_result.json  create_tables.sql  create_tables_fixed.sql  create_tables_simple.sql  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  scheduler.py  tailwind.config.js  test_crawler.py  test_supabase_insert.py  tsconfig.json  tsconfig.tsbuildinfo  windsurf.rules
.github/workflows/: ci.yml
.next/: build-manifest.json  react-loadable-manifest.json  trace
.next/cache/: .rscinfo  .tsbuildinfo
app/: layout.tsx  page.tsx
components/: three-panel-layout.tsx  website-analysis-center.tsx  website-analysis-left.tsx  website-analysis-right.tsx
contexts/: AssessmentContext.tsx
docs/: TradeWizard_4.0_PRD.md  architecture-diagram.mermaid  core-user-flows.md  implementation-guide.md  sarah_agent_ux_prd.md  system-architecture.md  tech-choices-doc.md  tradewizard-4-project-blueprint.md  web_scraper_implementation_plan.md
lib/: interpreter.ts  scraper.ts  supabase.ts
scraping/: requirements.txt
scripts/: demo.py  fetch_debug_data.py  reset_assessment.py  seed_assessments.py  task-complexity-report.json
src/: config.py  llm_service.py
src/extractors/: llm.py  (+1 more)
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json  tasks_backup.json
tests/: test_interpreter.py  test_llm_pipeline.py
(+175 files in other folders)
