[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradewizard"
version = "0.1.0" # You can update this later
description = "TradeWizard Application"
readme = "README.md" # Assuming you have a README.md
requires-python = ">=3.9" # Adjust if needed based on your Python version
# Add classifiers, authors, etc. later if desired

[tool.setuptools.packages.find]
where = ["src"]  # Important: Tells setuptools where to find packages
